[project]
name = "agent"
version = "0.1.0"
description = ""
authors = [
    {name = "hami"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "uvicorn[standard] (>=0.36.0,<0.37.0)",
    "fastapi (>=0.117.1,<0.118.0)",
    "langgraph (>=0.6.7,<0.7.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "openai (>=1.108.1,<2.0.0)",
    "pymongo[srv] (>=4.15.1,<5.0.0)",
    "langchain-openai (>=0.3.33,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
